# electrostatic_analysis

./: .gitignore  CMakeLists.txt  README.md  make_build.sh  results.txt
include/: boundary.hpp  solver_sor.hpp  util.hpp
post-process/: plot_vertical.py  vectormap.py  visualize.py
src/: boundary.cpp  main.cpp  solver_sor.cpp  util.cpp
